--- a/index.html
+++ b/index.html
@@ -21,31 +21,7 @@
       </div>
       <!--end of title -->
       <!-- House entire slider -->
-      <div class="slider-container">
-        <!-- Single slide -->
-        <article class="slide">
-          <!-- img -->
-          <img
-            src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
-            alt=""
-            class="img"
-          />
-          <!-- name -->
-          <h4>Paul Jon</h4>
-          <!-- job title -->
-          <p class="title">Product Designer</p>
-          <!-- job info -->
-          <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti
-            dignissimos saepe consequatur dolorum aut pariatur.
-          </p>
-          <!-- quote -->
-          <div class="quote-icon">
-            <i class="fas fa-quote-right"></i>
-          </div>
-        </article>
-        <!-- End of Single slide -->
-      </div>
+      <div class="slider-container"></div>
       <!-- Prev and Next button -->
       <button class="btn prev-btn">
         <i class="fas fa-chevron-left"></i>
@@ -56,6 +32,6 @@
       <!-- End of Prev and Next button -->
       <!-- end of entire slider House -->
     </section>
-    <script type="module" src="app.js"></script>
+    <script type="module" src="./js/app.js"></script>
   </body>
 </html>
